# ROS_TEST_1

./: CMakeLists.txt  README.md  package.xml
msg/: VirtualObstacle.msg
srv/: GetGuidedCurves.srv
